Trying to fix bottom nav flickering

--- a/style/main.css
+++ b/style/main.css
@@ -1708,7 +1708,7 @@ header div {
 }
 	
 	#mobile-nav {
-  	bottom: 0; /* Hide the navbar 50 px outside of the top view */
+  	bottom: 0px; /* Hide the navbar 50 px outside of the top view */
   	transition: bottom 0.3s; /* Transition effect when sliding down (and up) */
 	width: 100%;
 	height: 64px;
@@ -1726,7 +1726,7 @@ header div {
 }
 	
 .mobile-nav {
-  	bottom: 0;
+  	bottom: 0px;
   	transition: bottom 0.3s;
 	width: 100%;
 	height: 64px;
